tests/fixtures/invalid/float_pow_bytes.py
# Cannot power Float and Bytes
x: float = 1.0 ** b"hello"
